Random crash using Pose Brush #74426

Closed
opened 2020-03-04 10:47:36 +01:00 by Sergey Sharybin · 5 comments

System Information
Operating system: Linux-5.4.0-4-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-03 18:38, hash: 31aefdeec5
Worked: (optional)

Short description of error

Enabling pose brush and hovering mouse over mesh surface causes often crashes.

Exact steps for others to reproduce the error

Happens a lot in debug builds. In release builds the easiest way to reproduce so far:

  • Open attached file
  • Activate Pose Brush
  • Quickly move mouse over the mesh surface

pose_crash.blend

gdb stacktrace: P1282

**System Information** Operating system: Linux-5.4.0-4-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-03 18:38, hash: `31aefdeec5` Worked: (optional) **Short description of error** Enabling pose brush and hovering mouse over mesh surface causes often crashes. **Exact steps for others to reproduce the error** Happens a lot in debug builds. In release builds the easiest way to reproduce so far: - Open attached file - Activate Pose Brush - Quickly move mouse over the mesh surface [pose_crash.blend](https://archive.blender.org/developer/F8387583/pose_crash.blend) gdb stacktrace: [P1282](https://archive.blender.org/developer/P1282.txt)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the problem:

Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006
Blender Vesion: version: 2.83 (sub 6), branch: master, commit date: 2020-03-03 18:38, hash: 31aefdeec5

I can't reproduce the problem: Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006 Blender Vesion: version: 2.83 (sub 6), branch: master, commit date: 2020-03-03 18:38, hash: `31aefdeec5`

This issue was referenced by d83c0969f6

This issue was referenced by d83c0969f6ee6d193f384341cbbd0455ef46dabd
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-03-04 12:27:36 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#74426
No description provided.